wdl-analysis/tests/validation/literal-struct-duplicate-keys/source.errors
error: unknown type name `Foo`
  ┌─ tests/validation/literal-struct-duplicate-keys/source.wdl:6:5
  │
6 │     Foo foo = Foo {
  │     ^^^

warning[UnusedDeclaration]: unused declaration `foo`
  ┌─ tests/validation/literal-struct-duplicate-keys/source.wdl:6:9
  │
6 │     Foo foo = Foo {
  │         ^^^

error: unknown type name `Foo`
  ┌─ tests/validation/literal-struct-duplicate-keys/source.wdl:6:15
  │
6 │     Foo foo = Foo {
  │               ^^^

error: duplicate key `foo` in literal struct
   ┌─ tests/validation/literal-struct-duplicate-keys/source.wdl:11:9
   │
 7 │         foo: "first",
   │         --- first key with this name is here
   ·
11 │         foo: "dup",
   │         ^^^ this key is a duplicate

error: duplicate key `bar` in literal struct
   ┌─ tests/validation/literal-struct-duplicate-keys/source.wdl:12:9
   │
 8 │         bar: "first",
   │         --- first key with this name is here
   ·
12 │         bar: "dup",
   │         ^^^ this key is a duplicate

error: duplicate key `foo` in literal struct
   ┌─ tests/validation/literal-struct-duplicate-keys/source.wdl:13:9
   │
 7 │         foo: "first",
   │         --- first key with this name is here
   ·
13 │         foo: "dup",
   │         ^^^ this key is a duplicate

